# agent-cordon

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agent_cordon/: __init__.py  async_api.py  canary.py  cli.py  detectors.py  egress.py  feedback.py  mcp.py  models.py  normalize.py  policy.py  rules.py  sanitize.py  scanner.py  server.py
benchmarks/: compare.py  corpus.jsonl  external_eval.py  feedback_retrain.py  run_benchmark.py
cordon/: __init__.py  canary.py  cli.py  detectors.py  egress.py  mcp.py  models.py  normalize.py  policy.py  rules.py  sanitize.py  scanner.py  server.py
examples/: mcp_tool_guard.py  openai_tool_calling.py  structured_logging.py
tests/: test_agent_cordon.py  test_agentward.py  test_benchmark.py  test_cordon.py
