[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cordon"
version = "0.2.0"
description = "A quarantine line for the data your LLM agent ingests: scan untrusted text and outbound actions for prompt injection and exfiltration."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "cordon contributors" }]
keywords = [
    "llm", "agent", "prompt-injection", "security", "guardrails",
    "ai-safety", "mcp", "tool-calling", "exfiltration", "egress",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/cordon"
Issues = "https://github.com/YOUR_USERNAME/cordon/issues"

[project.scripts]
cordon = "cordon.cli:main"
cordon-mcp = "cordon.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4"]
mcp = ["mcp>=1.0"]

[tool.setuptools.packages.find]
include = ["cordon*"]

[tool.setuptools.package-data]
cordon = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
